# waveform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THANKS  changelog.md
.github/: FUNDING.yml
.github/workflows/: macos.yml  macos_arm64.yml  main.yml
CI/: swift.patch
cmake/: ci_common.cmake  package_common.cmake  package_deb.cmake  package_macos.cmake
data/: gradient.effect
data/locale/: en-US.ini  it-IT.ini  zh-CN.ini  zh-TW.ini
installer/: README.txt  installer.iss  installer.iss.in
pkg/: com.obsproject.Studio.Plugin.waveform.metainfo.xml
src/: aligned_buffer.hpp  aligned_mem.hpp  circular_buffer.hpp  filter.hpp  filter_fma3.cpp  log.hpp  math_funcs.hpp  membuf.hpp  module.cpp  module.hpp  settings.hpp  simd_helpers.hpp  source.cpp  source.hpp  source_avx.cpp  source_avx2.cpp  source_generic.cpp  source_sse2.cpp  waveform_config.hpp.in
